<resources>
    <string name="app_name">EngineeringEnglish</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="superjob_12_500"> \n Друзья, вы помните, на нашем сайте мы говорили об уровнях изучения английского языка? Вы ознакомились с начальным, базовым, продвинутым и другими уровнями. Каждая ступень требует своего, особого знания грамматики, лексики, речевых оборотов, лексических конструкций английского языка.</string>
    <string name="t_start">Друзья, вы помните, на нашем сайте мы говорили об уровнях изучения английского языка? Вы ознакомились с начальным, базовым, продвинутым и другими уровнями. Каждая ступень требует своего, особого знания грамматики, лексики, речевых оборотов, лексических конструкций английского языка.</string>
    <string name="text_1">Благодаря постоянным техническим разработкам изучение технического английского языка очень популярно в течение последних нескольких лет</string>
    <string name="text_2">3) Занимаясь изучением технического английского языка, обязательно обратите внимание на соответствующие словари, где можно найти всю необходимую лексику и грамматику. Также не стоит забывать про различные уловки в переводе.</string>
    <string name="text_3">Понимание английского текста напрямую связано с тем, как много слов удалось изучить. Просто читая тексты на английском языке, вы можете запоминать слова в пассивном режиме, но технический английский можно выучить только с определенными усилиями.</string>
    <string name="_50_70"> Больше половины человеческих потребностей удовлетворяются за счет минерального сырья и нефтегазовой промышленности. Добыча полезных ископаемых осуществляется на наземных (копры, надшахтные здания, склады) и подземных (шахты) сооружениях. Шахты – это механизированное предприятие, осуществляющее добычу и транспортировку полезных ископаемых, проведение горных выработок, водоотлив и вентиляцию. Срок службы такого механизма – 50-70 лет. Однако без соответствующего ремонта, наладки отдельных механизмов срок службы резко сокращается. Профессия горного инженера существует для ремонта, наладки и должной эксплуатации шахт.</string>
    <string name="en1">Горный инженер – это специалист с высшим образованием, задачей которого является планирование, организация и управление горными работами. Он проектирует и создает новые рудники, карьеры, подземные сооружения.</string>
    <string name="in2">engineer [ɛndʒɪˈnɪə] происходит от латинского ingeniare − творить, производить / ingenium − ум, умение, ловкость. Этот же корень сохранился в современном ingenuity − изобретательность. Затем перешло в итальянское ingegnere и во французское ingénieur, а после было заимствовано в Middle English.</string>
    <string name="in3">1) Mechanical engineering - Инженерная механика, машиностроение, проектирование механических систем</string>
    <string name="electrical_engineering">2) Electrical engineering - Электромеханика, техническое проектирование электросхем</string>
    <string name="question_civil_engineering">3) Question civil engineering - Проектирование и строительство гражданских объектов</string>
    <string name="structural_engineering">4) Structural engineering - Проектирование промышленных сооружений / строительное проектирование</string>
    <string name="biomedical_engineering">5) Biomedical engineering - Биомедицинская инженерия</string>
    <string name="chemical_engineering">6) Chemical engineering - Химическая инженерия</string>
    <string name="software_engineering">7) Software engineering - Программная инженерия</string>
    <string name="systems_engineering">8) Systems engineering - Системная инженерия</string>
    <string name="an_engineering_technician">10) An engineering technician - Инженерно-технический работник</string>
    <string name="an_engineer">9) An engineer - Инженер, конструктор</string>
    <string name="ivil_engineering_practice">11) Сivil (engineering) practice - Методы возведения инженерных сооружений</string>
    <string name="occupation">12) Occupation - Профессия</string>
    <string name="petroleum_engineering">13) Petroleum engineering - Технология нефтегазодобычи></string>
    <string name="water_engineering">14) Water Engineering - Гидротехническое строительство</string>
    <string name="robotic_engineering">15) Robotic Engineering - Робототехника</string>
    <string name="coalindustry">16) Coalindustry - Угольная промышленность</string>
    <string name="minerals_surveyor">17) Minerals surveyor - Маркшейдер</string>
    <string name="a_measurement">18) Measurement - Измерение, вычисление, система мер</string>
    <string name="engineering">19) Engineering - Инженерное дело</string>
    <string name="m1">В процессе работы любое предприятие, занятое в области обработки различных сыпучих материалов, сталкивается с проблемой определения объёма обрабатываемого сырья.</string>
    <string name="m2">Маркшейдер - принимает участие в выполнении маркшейдерских работ. Участвует в привязке проектов горных выработок, сооружений, трасс и других объектов к условиям местности и переносе их в натуру. Выполняет необходимые измерения для контроля проходки горных выработок, соблюдения проектных сечений и уклонов и габаритов. Осуществляет маркшейдерское обслуживание проходки горных выработок, замеры складов и отвалов и т.д.</string>
    <string name="m3">Провести измерения, верно указав радиус окружности и погрешность по-английски, поможет следующий лексический набор.</string>
    <string name="calculations">1) Calculations - Расчеты, вычисления</string>
    <string name="dimensions_dims">2) Dimensions (сокращенно dims) - Размеры</string>
    <string name="linear_dimensions">3) Linear dimensions - Линейные размеры</string>
    <string name="a_direction">4) Direction - Направление</string>
    <string name="a_tape_measure">5) A tape measure - Мерная рулетка</string>
    <string name="an_angle">6) An angle - Угол</string>
    <string name="a_theodolite">7) A theodolite - Угломер</string>
    <string name="a_degree">8) A degree - Градус</string>
    <string name="a_grade">9) A grade - Метрический градус</string>
    <string name="diameter">10) Diameter - Диаметр</string>
    <string name="a_radius_plural_radii">11) A radius (plural: radii) - Радиус</string>
    <string name="circumference">12) Circumference - Периметр, длина окружности</string>
    <string name="a_surface">13) A surface - Поверхность</string>
    <string name="a_constant">14) A constant - Константа</string>
    <string name="a_face">15) A face - Лицевая поверхность</string>
    <string name="a_circle">16) A circle - Круг</string>
    <string name="a_concentric_circle">17) A concentric circle - Концентрическая окружность</string>
    <string name="a_curved_line">18) A curved line - Кривая линия</string>
    <string name="a_span">19) A span - Расстояние между объектами</string>
    <string name="an_extremity">1) An extremity - Крайняя точка</string>
    <string name="distance">20) Distance - Расстояние</string>
    <string name="ength">21) Ength - Длина</string>
    <string name="height">22) Height - Высота</string>
    <string name="width">23) Width - Ширина</string>
    <string name="thickness">24) Thickness - Толщина</string>
    <string name="area">25) Area - Площадь</string>
    <string name="cross_sectional_area">26) Cross-sectional area - Площадь сечения</string>
    <string name="surface_area">27) Surface area - Площадь поверхности</string>
    <string name="mass">28) Mass - Масса</string>
    <string name="weight">29) Weight - Вес</string>
    <string name="volume">30) Volume - Объем</string>
    <string name="density">31) Density - Плотность</string>
    <string name="external">32) External - Внешний</string>
    <string name="internal">33) Internal - Внутренний</string>
    <string name="horizontal">34) Horizontal - Горизонтальный</string>
    <string name="vertical">35) Vertical - Вертикальный</string>
    <string name="flat">36) Flat - Плоский</string>
    <string name="smooth">37) Smooth - Гладкий, ровный</string>
    <string name="to_measure">38) To measure - Измерять</string>
    <string name="inclined">39) Inclined - Наклонный, под углом</string>
    <string name="to_decrease">40) To decrease - Уменьшать</string>
    <string name="to_increase">41) To increase - Увеличивать</string>
    <string name="emg1">Персональный компьютер уже очень давно стал неотъемлемой частью жизни современного человека. Это устройство помогает человеку не только в работе, но и дома. С компьютером комфортно работать, с ним приятно развлекаться. Компьютер помогает оптимизировать рабочий процесс практически во всех сферах деятельности, в мире происходит тотальная компьютеризация.</string>
    <string name="emg2">Нет человека, который бы недооценил роль компьютера в современном мире. Он невероятно важен в наши дни.</string>
    <string name="eng3"><![CDATA[Огромное количество заимствований пришло к нам через компьютерные технологии, и это один из самых важных факторов распространения английского языка во всем мире. Начнем с того, что слово «компьютер», которое пришло к нам вместо устаревшего ЭВМ, уже безоговорочно воспринимается как равноправное слово русского языка.]]></string>
    <string name="eng4">Использование компьютера на уроках иностранного языка повышает мотивацию и сейчас уже все понимают, что Интернет обладает колоссальными информационными возможностями и не менее впечатляющими услугами.</string>
    <string name="english_is_everywhere">Статус международного языка — не просто формальность. Если посмотреть, в каких сферах он используется, можно убедиться: English is everywhere.</string>
    <string name="class1">1) Class - класс</string>
    <string name="variable">2) Variable - переменная</string>
    <string name="folder">3) Folder - папка</string>
    <string name="example">4) example - пример</string>
    <string name="property">5) Property - свойство</string>
    <string name="versatile">6) Versatile - многофункциональный, универсальный</string>
    <string name="maintenance">7) Maintenance - поддержка</string>
    <string name="explanation">8) Explanation - объяснение</string>
    <string name="experience">9) Experience - опыт, случай</string>
    <string name="separate">10) Separate - отдельный, разделять</string>
    <string name="feature">11) Feature - характеристика, особенность, функция</string>
    <string name="perform">12) Perform - выполнять</string>
    <string name="especially">13) Especially - особенно, главным образом</string>
    <string name="previous">14) Previous - предыдущий</string>
    <string name="thoroughly">15) Thoroughly - тщательно, полно</string>
    <string name="scheme">16) Scheme - схема, план</string>
    <string name="field">17) Field - поле, область</string>
    <string name="necessary">18) Necessary - необходимый</string>
    <string name="string">19) String - строка</string>
    <string name="definition">20) Definition - определение</string>
    <string name="implement">21) Implement - реализация, внедрение</string>
    <string name="assignment">22) Assignment - задание, присвоение</string>
    <string name="defence">23) Defence - защита</string>
    <string name="dv1">Каждый программист, который планирует развивать свои навыки и поддерживать их в актуальном состоянии, должен как минимум понимать Английский язык. Это, впрочем, относится к специалистам в любой сфере.</string>
    <string name="dv2">И, несмотря на этот, казалось бы, очевидный факт, многие начинающие программисты игнорируют его. «Зачем мне это?» — спрашивают они. «Ведь вокруг так много русскоязычного интернета, который и научит и покажет и работу предложит».</string>
</resources>