<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.measurement.MeasurementFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:gravity="center"
                android:textStyle="bold"
                android:text="Измерения"
                android:textSize="18sp"/>

            <ImageView
                android:id="@+id/measurement_crane"
                android:layout_width="match_parent"
                android:background="@drawable/circle_orange_background_bottom"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:layout_gravity="center_vertical|end"
                android:justificationMode="inter_word"
                android:layout_marginTop="10dp"
                android:text="@string/m1"
                android:textSize="14sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:layout_gravity="center_vertical|end"
                android:justificationMode="inter_word"
                android:layout_marginTop="10dp"
                android:text="@string/m2"
                android:textSize="14sp"
                tools:ignore="UnusedAttribute" />

            <ImageView
                android:id="@+id/measurement_en"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:layout_gravity="center_vertical|end"
                android:justificationMode="inter_word"
                android:layout_marginTop="10dp"
                android:text="@string/m3"
                android:textSize="14sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextGreen"
                android:layout_marginTop="16dp"
                android:text="@string/calculations"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextOrange"
                android:layout_marginTop="10dp"
                android:text="@string/dimensions_dims"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextGreen"
                android:layout_marginTop="16dp"
                android:text="@string/linear_dimensions"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextOrange"
                android:layout_marginTop="10dp"
                android:text="@string/a_direction"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextGreen"
                android:layout_marginTop="16dp"
                android:text="@string/a_tape_measure"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextOrange"
                android:layout_marginTop="10dp"
                android:text="@string/a_theodolite"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextGreen"
                android:layout_marginTop="16dp"
                android:text="@string/an_angle"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextOrange"
                android:layout_marginTop="10dp"
                android:text="@string/a_degree"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextGreen"
                android:layout_marginTop="16dp"
                android:text="@string/a_grade"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextOrange"
                android:layout_marginTop="10dp"
                android:text="@string/diameter"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextGreen"
                android:layout_marginTop="16dp"
                android:text="@string/a_radius_plural_radii"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextOrange"
                android:layout_marginTop="10dp"
                android:text="@string/circumference"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextGreen"
                android:layout_marginTop="16dp"
                android:text="@string/a_constant"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextOrange"
                android:layout_marginTop="10dp"
                android:text="@string/a_surface"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextGreen"
                android:layout_marginTop="16dp"
                android:text="@string/a_face"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextOrange"
                android:layout_marginTop="10dp"
                android:text="@string/a_circle"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextGreen"
                android:layout_marginTop="16dp"
                android:text="@string/a_concentric_circle"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextOrange"
                android:layout_marginTop="10dp"
                android:text="@string/a_curved_line"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextGreen"
                android:layout_marginTop="16dp"
                android:text="@string/an_extremity"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextOrange"
                android:layout_marginTop="10dp"
                android:text="@string/a_span"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextGreen"
                android:layout_marginTop="16dp"
                android:text="@string/distance"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextOrange"
                android:layout_marginTop="10dp"
                android:text="@string/ength"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextGreen"
                android:layout_marginTop="16dp"
                android:text="@string/height"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextOrange"
                android:layout_marginTop="10dp"
                android:text="@string/width"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextGreen"
                android:layout_marginTop="16dp"
                android:text="@string/thickness"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextOrange"
                android:layout_marginTop="10dp"
                android:text="@string/area"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextGreen"
                android:layout_marginTop="16dp"
                android:text="@string/cross_sectional_area"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextOrange"
                android:layout_marginTop="10dp"
                android:text="@string/surface_area"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextGreen"
                android:layout_marginTop="16dp"
                android:text="@string/mass"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextOrange"
                android:layout_marginTop="10dp"
                android:text="@string/weight"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextGreen"
                android:layout_marginTop="16dp"
                android:text="@string/volume"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextOrange"
                android:layout_marginTop="10dp"
                android:text="@string/density"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextGreen"
                android:layout_marginTop="16dp"
                android:text="@string/external"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextOrange"
                android:layout_marginTop="10dp"
                android:text="@string/internal"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextGreen"
                android:layout_marginTop="16dp"
                android:text="@string/horizontal"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextOrange"
                android:layout_marginTop="10dp"
                android:text="@string/vertical"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextGreen"
                android:layout_marginTop="16dp"
                android:text="@string/flat"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextOrange"
                android:layout_marginTop="10dp"
                android:text="@string/smooth"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextGreen"
                android:layout_marginTop="16dp"
                android:text="@string/inclined"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextOrange"
                android:layout_marginTop="10dp"
                android:text="@string/to_measure"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextGreen"
                android:layout_marginTop="16dp"
                android:text="@string/to_increase"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextOrange"
                android:layout_marginTop="10dp"
                android:text="@string/to_decrease"
                android:textSize="12sp"
                tools:ignore="UnusedAttribute" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>